# glc

./: CHANGELOG  CMakeLists.txt  Doxyfile  Makefile  README
cmake_modules/: FindELFHACKS.cmake  FindPACKETSTREAM.cmake
scripts/: capture.sh  encode.sh  glc-build.sh  glc-capture  glc-encode  glc-play-mplayer  play.sh
src/: CMakeLists.txt  capture.c  gen_version.c  play.c
src/capture/: audio_capture.c  audio_capture.h  audio_hook.c  audio_hook.h  gl_capture.c  gl_capture.h
src/common/: core.c  core.h  glc.h  log.c  log.h  state.h  thread.c  thread.h  util.c  util.h
src/core/: color.c  color.h  file.c  file.h  info.c  info.h  pack.c  pack.h  rgb.c  rgb.h  scale.c  scale.h  ycbcr.c  ycbcr.h
src/export/: img.c  img.h  wav.c  wav.h  yuv4mpeg.c  yuv4mpeg.h
src/glc/: CMakeLists.txt
src/glc/capture/: alsa_capture.c  alsa_capture.h  alsa_hook.c  alsa_hook.h  audio_capture.c  audio_capture.h  audio_hook.c  audio_hook.h  gl_capture.c  gl_capture.h
src/glc/common/: core.c  core.h  glc.h  log.c  log.h  state.c  state.h  thread.c  thread.h  util.c  util.h
src/glc/core/: color.c  color.h  copy.c  copy.h  file.c  file.h  info.c  info.h  pack.c  pack.h  rgb.c  rgb.h  scale.c  scale.h  tracker.c  tracker.h  ycbcr.c  ycbcr.h
src/glc/export/: img.c  img.h  wav.c  wav.h  yuv4mpeg.c  yuv4mpeg.h
src/glc/play/: alsa_play.c  alsa_play.h  audio_play.c  audio_play.h  demux.c  demux.h  gl_play.c  gl_play.h
src/hook/: CMakeLists.txt  alsa.c  lib.h  main.c  opengl.c  x11.c
src/lib/: alsa.c  lib.h  main.c  opengl.c  x11.c
src/play/: audio_play.c  audio_play.h  demux.c  demux.h  gl_play.c  gl_play.h
src/stream/: audio.c  audio.h  audio_capture.c  audio_capture.h  audio_play.c  audio_play.h  color.c  color.h  demux.c  demux.h  file.c  file.h  gamma.c  gamma.h  gl.c  gl.h  gl_capture.c  gl_capture.h  gl_play.c  gl_play.h  img.c  img.h  info.c  info.h  pack.c  pack.h  rgb.c  rgb.h  scale.c  scale.h  wav.c  wav.h  ycbcr.c  ycbcr.h  yuv4mpeg.c  yuv4mpeg.h
