
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/src/glc)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake_modules")

IF (UNIX)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden")
  ADD_DEFINITIONS("-D_GNU_SOURCE")
  ADD_DEFINITIONS("-D_FILE_OFFSET_BITS=64")
ENDIF (UNIX)


FIND_PACKAGE(PACKETSTREAM)

IF (PACKETSTREAM_FOUND)
  INCLUDE_DIRECTORIES(${PACKETSTREAM_INCLUDE_DIR})
ENDIF (PACKETSTREAM_FOUND)


SET(VERSION_HDR ${PROJECT_SOURCE_DIR}/src/glc/common/version.h)

IF (NOT EXISTS ${VERSION_HDR})
  SET(VERSION_HDR_DIR ${CMAKE_CURRENT_BINARY_DIR}/glc/common)
  SET(VERSION_HDR ${VERSION_HDR_DIR}/version.h)
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
  ADD_EXECUTABLE(gen_version gen_version.c)
  GET_TARGET_PROPERTY(GEN_VERSION gen_version LOCATION)
ENDIF (NOT EXISTS ${VERSION_HDR})

IF (NOT GIT_DIR)
  SET(GIT_DIR ${PROJECT_SOURCE_DIR}/.git)
ENDIF (NOT GIT_DIR)


IF (BINARIES)
  ADD_EXECUTABLE(capture capture.c)
  TARGET_LINK_LIBRARIES(capture dl)
  SET_TARGET_PROPERTIES(capture PROPERTIES
  			OUTPUT_NAME glc-capture)

  ADD_EXECUTABLE(play play.c)
  TARGET_LINK_LIBRARIES(play glc-core glc-play glc-export ${PACKETSTREAM_LIBRARY})
  SET_TARGET_PROPERTIES(play PROPERTIES
  			OUTPUT_NAME glc-play)

  IF (UNIX)
    INSTALL(TARGETS capture play
    	  RUNTIME DESTINATION bin)
  ENDIF (UNIX)
ENDIF (BINARIES)

ADD_SUBDIRECTORY(glc)

IF (HOOK)
  ADD_SUBDIRECTORY(hook)
ENDIF (HOOK)
